--- a/report/report.lyx
+++ b/report/report.lyx
@@ -185,7 +185,7 @@ literal "false"
 
 \end_inset
 
-, which can be considered as a form of 
+, which is considered as a form of 
 \emph on
 active forgetting
 \emph default
@@ -212,10 +212,10 @@ literal "false"
 .
  In contrast, humans and other animals can learn in a continual fashion
  in a lifelong manner.
- There are experimental evidence to suggest that in order to prevent catastrophi
-c forgetting, there are specialised systems in the hippocampus that allows
- for learning of new information which, over time, will be transferred to
- the neocortical system for long-term storage 
+ Experimental evidence suggests that in order to prevent catastrophic forgetting
+, there are specialised systems in the hippocampus that allows for learning
+ new information which, over time, will be transferred to the neocortical
+ system for long-term storage 
 \begin_inset CommandInset citation
 LatexCommand cite
 key "PARISI201954"
@@ -231,12 +231,12 @@ Results
 \end_layout
 
 \begin_layout Subsection*
-Learning through perceptron
+Learning in a perceptron
 \end_layout
 
 \begin_layout Standard
 The metabolic energy expended due to synaptic plasticity during learning
- is studied through perceptron.
+ is studied in a perceptron.
  A perceptron is a single neuron model which linearly classifies the input
  patterns into binary classes.
  In our case, the input patterns are random patterns each associated to
@@ -425,7 +425,8 @@ noprefix "false"
 \end_inset
 
 ).
- 
+ The decay value is applied on the weights at every time step of the training
+ process.
 \end_layout
 
 \begin_layout Standard
@@ -548,11 +549,11 @@ noprefix "false"
 \end_inset
 
 , a straight line is fit for the decay range 
-\begin_inset Formula $\left.4*e^{-6}\right.$
+\begin_inset Formula $\left.10^{-6}\right.$
 \end_inset
 
  to 
-\begin_inset Formula $\left.e^{-4}\right.$
+\begin_inset Formula $\left.10^{-4}\right.$
 \end_inset
 
 .
@@ -876,7 +877,11 @@ However, we see this linear relationship between patterns and decay rates
  This does not hold true when we considered low and high range of decay
  values, the curve tends to flatten for those values, resembling a sigmoid
  curve.
- We tested this for N=250 and the plot looks as shown in the Figure 
+ We tested this for 
+\begin_inset Formula $\left.N=250\right.$
+\end_inset
+
+ and the plot looks as shown in the Figure 
 \begin_inset CommandInset ref
 LatexCommand ref
 reference "fig:sigmoid"
@@ -933,12 +938,15 @@ name "fig:sigmoid"
 \end_layout
 
 \begin_layout Subsection*
-Accuracy of a perceptron
+Performance of a perceptron
 \end_layout
 
 \begin_layout Standard
-The accuracy of a perceptron is defined as the number of input patterns
- that are correctly classified out of all the input patterns presented.
+The performance of a perceptron is measured based on its ability to learn
+ the input patterns and appropriately classify them.
+ This measure, also called the accuracy of a perceptron, is defined as the
+ number of input patterns that are correctly classified out of all the input
+ patterns presented.
  A perceptron with a passive decay on its weights may not always learn all
  the patterns during the training process.
  Depending on the value of the decay rate, the training process may reach
@@ -962,7 +970,7 @@ The accuracy of a perceptron is defined as the number of input patterns
 \begin_inset Formula $\left.n\right.$
 \end_inset
 
-epochs.
+ epochs.
  We calculated the optimal value of 
 \begin_inset Formula $\left.n\right.$
 \end_inset
@@ -1051,14 +1059,18 @@ We then tested the behaviour of the perceptron by fixing the number of synapses
 \begin_inset Formula $\left.N=1000\right.$
 \end_inset
 
- and the number of patterns to train as 1600.
+ and the number of patterns to train as 
+\begin_inset Formula $\left.1600\right.$
+\end_inset
+
+.
  We measured the accuracy, learning rate, and the energy consumed by the
  perceptron for a decay range of 
-\begin_inset Formula $\left.1e-8\right.$
+\begin_inset Formula $\left.10^{-8}\right.$
 \end_inset
 
  to 
-\begin_inset Formula $\left.1e-2\right.$
+\begin_inset Formula $\left.10^{-2}\right.$
 \end_inset
 
  (Figure 
@@ -1191,18 +1203,30 @@ Different performance metrics along with energy consumed are measured for
 \begin_inset Formula $\left.N=1000\right.$
 \end_inset
 
- and 1600 patterns over a decay range of 
-\begin_inset Formula $\left.1e-8\right.$
+ and 
+\begin_inset Formula $\left.1600\right.$
+\end_inset
+
+ patterns over a decay range of 
+\begin_inset Formula $\left.10^{-8}\right.$
 \end_inset
 
  to 
-\begin_inset Formula $\left.1e-2\right.$
+\begin_inset Formula $\left.10^{-2}\right.$
 \end_inset
 
 .
- Each data point is the average of 50 runs.
+ Each data point is the average of 
+\begin_inset Formula $\left.50\right.$
+\end_inset
+
+ runs.
  The uncertainty shown for each data point is the standard deviation of
- 50 runs.
+ 
+\begin_inset Formula $\left.50\right.$
+\end_inset
+
+ runs.
  
 \begin_inset CommandInset label
 LatexCommand label
@@ -1266,11 +1290,11 @@ noprefix "false"
  bottom right).
  The energy expended by the perceptron to learn the patterns increases as
  the decay rate increases till the decay value reaches 
-\begin_inset Formula $\left.1e-5\right.$
+\begin_inset Formula $\left.10^{-5}\right.$
 \end_inset
 
  after which the energy decreases till the decay value becomes 
-\begin_inset Formula $\left.1e-4\right.$
+\begin_inset Formula $\left.10^{-4}\right.$
 \end_inset
 
  after which the value of energy increases again.
@@ -1306,7 +1330,7 @@ noprefix "false"
 \begin_layout Standard
 Even though the number of updates to the weights is more for the decay value
  of 
-\begin_inset Formula $\left.1e-4\right.$
+\begin_inset Formula $\left.10^{-4}\right.$
 \end_inset
 
  (Figure 
@@ -1321,7 +1345,7 @@ noprefix "false"
 
  left), the perceptron has trained for a fewer epochs when compared to the
  decay value of 
-\begin_inset Formula $\left.1e-5\right.$
+\begin_inset Formula $\left.10^{-5}\right.$
 \end_inset
 
 .
@@ -1339,22 +1363,22 @@ noprefix "false"
 
  bottom-right).
  However, for the range of decay values in 
-\begin_inset Formula $\left.1e-4\right.$
+\begin_inset Formula $\left.10^{-4}\right.$
 \end_inset
 
  and 
-\begin_inset Formula $\left.1e-3\right.$
+\begin_inset Formula $\left.10^{-3}\right.$
 \end_inset
 
 , the energy expended by the perceptron increases again with the increase
  in decay.
  Clearly, the number of updates to the synaptic weights is more for decay
  value 
-\begin_inset Formula $\left.1e-3\right.$
+\begin_inset Formula $\left.10^{-3}\right.$
 \end_inset
 
  when compared to the decay value of 
-\begin_inset Formula $\left.1e-4\right.$
+\begin_inset Formula $10^{-4}$
 \end_inset
 
  even if there is not much of a difference in the number of epochs required
@@ -1383,14 +1407,44 @@ noprefix "false"
  top-left) accounting for fewer weight updates than the former case.
  This explains why there in an increase in the energy curve in the decay
  range 
-\begin_inset Formula $\left.1e-4\right.$
+\begin_inset Formula $\left.10^{-4}\right.$
 \end_inset
 
  and 
-\begin_inset Formula $\left.1e-3\right.$
+\begin_inset Formula $\left.10^{-3}\right.$
 \end_inset
 
 .
+\end_layout
+
+\begin_layout Standard
+Therefore, the energy required to train the perceptron increases as the
+ decay increases because with the decay in weights the perceptron spends
+ more time steps to learn the input patterns which leads to more updates
+ in its weights thus leading to the increase in the total energy required
+ for training.
+ Although, for very low decay values, between 
+\begin_inset Formula $\left.10^{-8}\right.$
+\end_inset
+
+ and 
+\begin_inset Formula $\left.10^{-7}\right.$
+\end_inset
+
+, we can observe a small amount of energy being saved (Figure 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:Performance"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+ bottom-right) where the total number of updates to the weights is less
+ than the scenario without decay.
+ Hence, passive decay in weights during the training process does not contribute
+ to energy conservation in the perceptron.
 \end_layout
 
 \begin_layout Standard
@@ -1426,25 +1480,25 @@ The number of updates to the synaptic weights of the perceptron during the
  training process.
  (Left) The number of updates to weights over multiple runs for the decay
  values 
-\begin_inset Formula $\left.1e-6\right.$
+\begin_inset Formula $\left.10^{-6}\right.$
 \end_inset
 
 , 
-\begin_inset Formula $\left.1e-5\right.$
+\begin_inset Formula $\left.10^{-5}\right.$
 \end_inset
 
 , and 
-\begin_inset Formula $\left.1e-4\right.$
+\begin_inset Formula $\left.10^{-4}\right.$
 \end_inset
 
 .
  (Right) The number of updates to the synaptic weights over multiple runs
  for the decay values 
-\begin_inset Formula $\left.1e-4\right.$
+\begin_inset Formula $\left.10^{-4}\right.$
 \end_inset
 
  and 
-\begin_inset Formula $\left.1e-3\right.$
+\begin_inset Formula $\left.10^{-3}\right.$
 \end_inset
 
 .
@@ -1463,13 +1517,19 @@ name "fig:epoch-updates"
 
 \end_layout
 
-\begin_layout Plain Layout
-
-\end_layout
-
 \end_inset
 
 
+\end_layout
+
+\begin_layout Subsection*
+Algorithms for forgetting
+\end_layout
+
+\begin_layout Standard
+In the previous section, we studied the accuracy of the perceptron while
+ learning the input patterns with passive forgetting.
+ 
 \end_layout
 
 \begin_layout Standard
